--- a/main.css
+++ b/main.css
@@ -33,10 +33,11 @@ nav > p {
   min-width: 32px;
   min-height: 33px;
   align-items: center;
-  justify-content: center;
   border: 0.5px solid;
   border-radius: 5px;
   text-align: center;
+  display: flex;
+  justify-content: flex-end;
   
 }
 
