--- a/main.css
+++ b/main.css
@@ -20,6 +20,10 @@ figure {
 header nav {
   display: flex;
   justify-content: flex-end;
+  
+header p {
+  padding: 0 20px;
+  margin: 0;
 }
 
 div > h1 {
