--- a/main.css
+++ b/main.css
@@ -22,6 +22,8 @@ header nav {
   justify-content: flex-end;
   
 header p {
+  min-width: 32px;
+  min-height: 33px;
   padding: 0 20px;
   margin: 0;
   border: 0.5px solid;
