--- a/main.css
+++ b/main.css
@@ -13,6 +13,12 @@ figure img {
   height: auto;
 }
 
+header .row, {
+  display: flex;
+  align-items: center
+    
+}
+
 figure {
   margin-bottom: 30px;
 }
