--- a/main.css
+++ b/main.css
@@ -25,7 +25,7 @@ figure {
 
 header nav {
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   
 header p {
   min-width: 32px;
