--- a/main.css
+++ b/main.css
@@ -1,130 +1,98 @@
 body {
   font-family: 'Roboto', sans-serif;
+  font-weight: 300;
 }
 
-ul {
-  list-style: none;
+header {
+  padding: 20px 0;
+}
+
+header .row,
+footer .row {
   display: flex;
-  justify-content: flex-end;
+  align-items: center;
 }
 
-figure img {
-  width: 100%;
-  height: auto;
-}
-
-header .row, {
-  display: flex;
-  align-items: center
-    
-}
-
-figure {
-  margin-bottom: 30px;
+header h1 {
+  font-weight: 700;
+  margin: 0;
 }
 
 header nav {
   display: flex;
-  justify-content: center;
-  
+  justify-content: flex-end;
+}
+
 header p {
-  min-width: 32px;
-  min-height: 33px;
   padding: 0 20px;
   margin: 0;
-  border: 0.5px solid;
-  border-radius: 5px;
-}
-
-div > h1 {
-  font-size: 1.8rem;
-}
-
-nav > p {
-  cursor: pointer;
-}
-.pill-black, .pill-white {
-  min-width: 32px;
-  min-height: 33px;
-  align-items: center;
-  border: 0.5px solid;
-  border-radius: 5px;
-  text-align: center;
-  display: flex;
-  justify-content: flex-end;
-  
-}
-
-.pill-black {
-  background-color: #000000;
-  color: #FFFFFF;
-}
-
-}
-
-.pill-white {
-  background-color: #000000;
-  color: #022bf7;
-}
-
-footer {
-  margin-top: 20px;
-}
-
-footer div {
-  display: flex;
-  align-items: center;
-}
-
-/* Customizations of Bootstrap classes */
-
-header .row {
-  display: flex;
-  align-items: center;
-}
-
-.col-sm-4 p {
-  margin: 25px 20px 15px;
-  min-width: 60px;
-  padding: 1px;
-}
-
-section.container .row {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
 }
 
 .jumbotron {
   display: flex;
   align-items: center;
-  height: 350px;
-  background-image: url("https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/buildawebsite.jpg");
+  background-image: url('https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/jumbotron.jpg');
   background-size: cover;
-  background-position: center;
+  color: #ffffff;
+  height: 500px;
+  text-shadow: 0.25px 0.25px 0.25px #000000;
 }
 
 .jumbotron h2 {
-  background-color: #FFFFFF;
-  display: inline-block;
-  color: #F06529;
+  font-size: 60px;
   font-weight: 700;
-  padding: 10px 35px;
-  border-radius: 5px;
+  margin: 0;
+  color: #fff;
 }
 
 .jumbotron h3 {
-  color: #FFFFFF;
-  font-weight: bold;
+  margin: 0 0 20px;
+  color: #fff;
 }
 
-.btn-primary {
-  color: #2e6da4;
-  background-color: #FFFFFF;
+section .row img {
+  margin: 0 0 30px;
+  width: 100%;
 }
 
-.col-sm-1 img {
-  min-width: 32px;
-  min-height: 33px;
+.col-md-6 {
+  margin: 0 0 30px;
+}
+
+.btn.btn-primary {
+  border-radius: 2px;
+  border: 0px;
+  color: #fbd1d5;
+  text-shadow: none;
+  background-color: #ffffff;
+}
+
+.btn.btn-primary:hover {
+  color: #ffffff;
+  background-color: #fbd1d5;
+}
+
+.btn-secondary {
+  background-color: #E8DFE0;
+  color: #ffffff;
+  margin: 0 0 30px;
+}
+
+footer {
+  font-size: 12px;
+  padding: 20px 0;
+}
+
+footer .col-sm-8 {
+  display: flex;
+  justify-content: flex-end;
+}
+
+footer ul {
+  list-style: none;
+}
+
+footer li img {
+  width: 32px;
+  height: 32px;
 }
