--- a/main.css
+++ b/main.css
@@ -31,7 +31,7 @@ header p {
 .jumbotron {
   display: flex;
   align-items: center;
-  background-image: url('https://www.liv.asn.au/LIVPublicWebSite/media/150th-Anniversary-2009/law-tech-fomatted.jpg?width=770&height=410&ext=.jpg');
+  background-image: url('https://cdn.lawyer-monthly.com/Lawyer-Monthly/wp-content/uploads/2019/01/Will-the-Law-of-the-Future-Reflect-the-Law-of-the-Past.jpg');
   background-size: cover;
   color: #ffffff;
   height: 400px;
