--- a/About.css
+++ b/About.css
@@ -31,7 +31,7 @@ header p {
 .jumbotron {
   display: flex;
   align-items: center;
-  background-image: url('https://cdn.lawyer-monthly.com/Lawyer-Monthly/wp-content/uploads/2019/01/Will-the-Law-of-the-Future-Reflect-the-Law-of-the-Past.jpg');
+  background-image: url('https://cdn.pixabay.com/photo/2016/12/15/12/26/contact-us-1908763_960_720.png');
   background-size: cover;
   color: #ffffff;
   height: 400px;
